--- a/application/designer/config.json
+++ b/application/designer/config.json
@@ -30,7 +30,7 @@
     "let" :
     {
         "APPLICATION"  : "designer",
-        "QOOXDOO_PATH" : "../../../../qooxdoo-0.8.3-sdk/",
+        "QOOXDOO_PATH" : "../../../../../qooxdoo-0.8.3-sdk/",
         "QXTHEME"      : "designer.theme.Theme",
         "API_EXCLUDE"  : ["qx.legacy.*","qx.test.*"],
         "LOCALES"      : [ "en" ],
