Oops. I left an external library in a config.

--- a/framework/blueprint/config.json
+++ b/framework/blueprint/config.json
@@ -41,12 +41,12 @@
         "source" :
         {
             "extend" : ["common"],
-            "include" : ["blueprint.*", "plaid.*"]
+            "include" : ["blueprint.*"]
         },
         "build" :
         {
             "extend" : ["common"],
-            "include" : ["blueprint.*", "plaid.*"],
+            "include" : ["blueprint.*"],
             "compile-dist" :
             {
                 "code"  :
