--- a/application/designer/config.json
+++ b/application/designer/config.json
@@ -31,7 +31,7 @@
     "let" :
     {
         "APPLICATION"  : "designer",
-        "QOOXDOO_PATH" : "../../../../../qooxdoo-1.2-sdk",
+        "QOOXDOO_PATH" : "../../../qooxdoo-1.3-sdk",
         "QXTHEME"      : "designer.theme.Theme",
         "API_EXCLUDE"  : ["qx.test.*", "${APPLICATION}.theme.*", "${APPLICATION}.test.*"],
         "LOCALES"      : [ "en" ],
