messing around with the designer2

--- a/application/showcase/config.json
+++ b/application/showcase/config.json
@@ -65,6 +65,16 @@
             "extend" : ["common"],
             "include" : ["blueprint.*", "plaid.*"]
         },
+        "source-script" :
+        {
+            "compile-options" :
+            {
+                "uris" :
+                {
+                    "add-nocache-param" : false
+                }
+            }
+        },
         "build" :
         {
             "extend" : ["common"],
