updates to ignore and changes to Abstract

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /application/legacy/designer/source/script/
 /application/legacy/designer2/source/script/
 /framework/blueprint/source/script/
+/application/designer/api/
+/application/designer/source/script/
+
