updates to config; minor abstract manager changes

--- a/application/designer/config.json
+++ b/application/designer/config.json
@@ -56,6 +56,16 @@
           }
       ]
     },
+    "source" :
+    {
+		"extend" : ["common"],
+    	"include" : ["blueprint.*"]
+    },
+    "build" :
+    {
+    	"extend" : ["common"],
+    	"include" : ["blueprint.*"]
+    },
     "source-script":{
       "compile-options":{
         "uris":{
