Updates to try to get form building working

--- a/application/designer/config.json
+++ b/application/designer/config.json
@@ -59,12 +59,14 @@
     "source" :
     {
 		"extend" : ["common"],
-    	"include" : ["blueprint.*"]
+    	"include" : ["blueprint.*", "designer.*"],
+    	"exclude" : ["designer.simulation.*"]
     },
     "build" :
     {
     	"extend" : ["common"],
-    	"include" : ["blueprint.*"]
+    	"include" : ["blueprint.*", "designer.*"],
+    	"exclude" : ["designer.simulation.*"]
     },
     "source-script":{
       "compile-options":{
