minor ignore changes

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /framework/blueprint/source/script/
 /application/designer/api/
 /application/designer/source/script/
+/application/designer/build/
